--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ nav{
      background-color: black;
      padding: 10px;
      font-size: 15px;
-     margin: 0px -10px 0px -5px;
+     margin: 0px -10px 0px -10px;
 }
 nav a{
     text-align: center;
@@ -37,11 +37,21 @@ a:hover {
   text-decoration: underline;
 }
 img.child {
-  margin: 5% 2% 0% 47%;
-  width: 50%;
+  margin: 5% 1% 5% 55%;
+  width: 40%;
   height: 50%;
 
 }
+h1 {
+  font-family: 'Anton', sans-serif;
+}
+h2{
+  font-family: 'Fjalla One', sans-serif;
+}
+p {
+  font-family: 'Varela Round', sans-serif;
+}
+
 .credits{
   font-style: italic;
   color: white;
@@ -50,47 +60,38 @@ img.child {
 }
 div.review {
   color: white;
-  font-size: 65%;
-  height: 200px;
-  width: 95%;
+  font-size: 75%;
+  width: 97%;
   background-color: black;
-  margin: -36.5% 3% 20% 1.2%;
+  padding-top: 2%;
+  padding-bottom: 19%;
   padding-left: 3%;
-  padding-right: 0.5%;
-  padding-top: .8%;
-
+  margin-right: 30px;
+  margin-top: -35%;
 }
+
 .info{
   color: red;
-  font-size: 65%;
-  margin-top: -46%;
-  margin-left: 5.5%;
-  margin-right: 55%;
-  padding-top: 3%;
-  border-top: 2%;
+  text-align: left;
+  font-size: 10.5px;
+  padding-left: 3%;
+  padding-right: 50%;
+  padding-bottom: -1%;
+  margin-top: -20%;
+}
 
 }
-.container{
-  position: relative;
-  overflow: hidden;
-  width: 99%;
-  height: 100%;
-  margin-top: 15%;
-  padding-top: 5%;
-  padding-left: 1%;
-}
-.responsive-iframe {
-  position: center;
-  top: 10px;
-  left: 0;
-  bottom: 1px;
-  right: 0;
-  width: 100%;
-  height: 200%;
-}
 div.shout{
-  display: block;
-  font-size: 100px;
+  display: inline-block;
+  color: white;
+  background-color: black;
+
+  font-size: 75%;
+  padding: 5%;
+  text-align: center;
+  margin-top: 6%;
+  margin-left: 60%;
+  padding-left: -60%;
 }
 
 
